--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,8 @@ dependencies:
   flutter_easyloading: ^3.0.5
   cached_network_image: ^3.2.1
   flutter_svg: ^1.1.0
+  auto_size_text:
+  image_gallery_saver: ^1.7.1
 
 
   flutter: 
