--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,13 +13,21 @@ dependencies:
   flutter_svg: ^1.1.0
   auto_size_text:
   image_gallery_saver: ^1.7.1
+  dio: ^4.0.6
+  connectivity_checker: ^1.1.0
+  hive: ^2.2.1
+  hive_flutter: ^1.1.0
 
 
   flutter: 
     sdk: flutter
 
+
 dev_dependencies: 
   flutter_lints: ^2.0.0
+  hive_generator: ^1.1.3
+  build_runner: ^2.1.11
+
   flutter_test: 
     sdk: flutter
 
